#94 collapsed gesloten feedback op bugoverzicht en bugsperproject. incl. a hover over flask is nu via inline css gedaan.

--- a/public/assets/css/metronic.css
+++ b/public/assets/css/metronic.css
@@ -1242,7 +1242,7 @@ h6.block {
 
 a {
     text-shadow: none;
-    color: #000000;
+    color: #FFF;
 }
 
 a:hover {
